--- a/frontend/src/App1.css
+++ b/frontend/src/App1.css
@@ -7124,7 +7124,7 @@ textarea {
   margin-top: -5px;
   margin-right: 3px;
 }
-/*# sourceMappingURL=style.css.map */
+/* CSS styles - source map removed */
 
 /* Checkout Steps */
 
